Replace codebase with Spring Kafka 3.3.x content as base for Spring Framework 7 upgrade
Co-authored-by: ivodvb <3462689+ivodvb@users.noreply.github.com>